res/default.css
html, body {
    height: 100%;
    overflow-y: hidden;
}

body {
    margin: 0;
    padding: 0;
    background-color: #FFFFFF;
}

#gamePageContainer {
    border: 0 none;
    font: inherit;
    margin: 0;
    padding: 0;
    vertical-align: baseline;

    overflow: auto;
    width: 1300px;
}

#topBar {
    position:absolute;
    top: 2px;
    left: 0px;
    height: 26px;
    width: 100%;
    border-bottom: 1px solid gray;

    box-shadow: 1px 0px 2px #888;
    min-width: 1180px;
}

#game {
    position:absolute;
    bottom: 0;
    top: 26px;

    width: 100%;
    min-width: 1180px;

    margin: 0 auto;
    height: auto;
    
    white-space: nowrap;	/* to prevent log column from wrapping */
}

#game * {
    white-space: normal;
}

.column {
    min-height: 100%;
    height: 100%;

    display: inline-block;
    margin-top: 4px;
}

#leftColumn {
    width: 25%;
    max-width: 400px;
    min-width: 300px;
    padding-right: 20px;

    overflow-y: auto;
    overflow-x: hidden;
}

#midColumn {
    width: 600px;
    overflow-y: auto;
    overflow-x: hidden;
    margin-top: 30px;
}

#rightColumn {
    width: 250px;
}

.tabsContainer {
    padding-bottom: 15px;
    position:absolute;
    top: 5px;
}

div#gameLog {
}

#footerLinks {
    position: absolute;
    bottom: 10px;
    right: 5px;
}

.activeTab {
    text-decoration: none;
    color: black;
}

.resourceRow {
    white-space: nowrap;
}

.clear {
    clear: both;
    float: none;
}

input[type="button"] {
    cursor: pointer;
}

.nosel {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.btn {
    border: 1px solid black;
    padding: 5px;
    cursor: default;
    width: 170px;
    text-align: center;
    margin-bottom:10px;
}

.btn:hover {
    cursor: pointer;
}

.btn.disabled:hover {
    cursor: inherit;
}

.btn.disabled div.btnContent {
    cursor: default;
}

.btn.bldEnabled div.btnContent {
    padding: 4px;
    border: 1px solid green;
}

.btn.small-text span {
    font-size: 90%;
}

.btn a:hover {
    color: orange;
    text-shadow: 1px 0px 10px coral;
}

.btn .noRes {
    color: #FF3030;
}

.spacer {
    border-bottom: 1px solid gray;
    margin-bottom: 12px;
}

.highlited {
    background-color: #EEE;
}

.help {
    position: absolute;
    border: 1px solid black;
    width: 600px;
    height: 300px;

    left: 50%;
    top: 50%;

    margin-top: -150px;
    margin-left: -300px;

    background-color: #FFF;
    padding: 20px;
}

.disabled {
    color: #999
}

.tipr_content {
    border: 1px solid black;
    background-color: #F6F6F6;
    padding: 3px;
    margin: 2px;
}

.button_tooltip {
    background-color: #FFF;
    color: black;
    z-index: 9000;
}

.panelContainer {
    border: 1px solid black;
    min-height: 30px;
    margin-top: 8px;
}

.panelContainer .title {
    padding: 4px;
    padding-left: 10px;
}

.panelContainer .toggle {
    border: 1px solid black;
    margin: 4px;
    padding-left:  6px;
    padding-right: 6px;
    cursor: pointer;
}

.panelContainer .container {
    padding: 10px;
}

.maxRes {
    color: #AAA;
}

.achievement {
    display: block;
    margin-bottom: 10px;
    padding: 5px;
    padding-left: 10px;
    border: 1px solid gray;
}

.achievement.unethical {
    border-color: red;
}

@media screen {
  .achievement[title]::after{
    content: ' ' attr(title);
    transition: opacity 0.25s;
    opacity: 0;
  }
  .achievement[title]:hover::after{
    opacity: 0.6;
  }
}

td.resLimitNotice {
    color: orange;
}

td.resLimitWarn {
    color: coral;
    opacity: 0.75;
}

.tooltipExt {
    position: absolute;
    border: 1px solid gray;
    padding: 5px;
    pointer-events: none;
}

.msg {
    display: block;
}

.msg.type_notice {
    color: #01A9DB;
}

.msg.type_important {
    color: coral;
}

#gameContainerId {
    border: 0px solid white !important;
    padding: 0px;
}

.bldGroupContainer {
    padding-top: 15px;
    border-top: 1px solid gray;
    margin-top: 10px;
}

.btn.modern {
    font-family: Helvetica;
    font-size: 14px;
    border-radius: 3px;
    border: 1px solid #888;
    padding: 0;
    width: 264px;
}

.btn.modern:hover {
    border-color: #777;
    background: #F9F9F9;
}

.btn.modern.disabled {
    border-color: #aaa;
}

.btn.modern.disabled:hover {
    border-color: #aaa;
    background: inherit;
}

.modern .btnContent {
    padding: 10px 0 10px 10px;
}
.btn.modern a {
    background-color: #EEE;
    border-left: 1px solid #888;
    padding: 10px !important;
    margin: -10px 0;
    min-width: 20px;
    text-decoration: none;
}

.btn.bldEnabled.modern div.btnContent {
    border-width: 0 0 0 8px;
    padding: 10px 0px 10px 10px;
}

.btn.modern .linkBreak{
    display: none;
}

.button_tooltip .noRes, .limited {
    color: #FF3030;
}

.tabInner {
    padding: 15px;
    border: 1px solid gray;
}

table.craftTable tr:hover td {
    background-color: rgba(155, 200, 155, 0.8);
}

.craftTable {
    padding-bottom: 50px;
}

#devPanel div {
    display: inline-block;
}

.toolbarIcon {
    padding-right: 15px;
    font-size: 12px;
    cursor: default;
}

.attitude {
    color: #777;
    font-size: 90%;
}

.attitude:before {
    content: "(";
}

.attitude:after {
    content: ")";
}

.trade-race > .left {
    width: 50%;
    float: left;
}

.trade-race > .right {
    width: 50%;
    float: right;
}

.trade-race .buys {
    color: #01A9DB;
    width: 40px;
    display: inline-block;
}

.trade-race .sells {
    color: green;
    width: 40px;
    display: inline-block;
}

.trade-race .ammount {
    color: #777;
}

.trade-race .ammount:before {
    content: "(";
}

.trade-race .ammount:after {
    content: ")";
}

.btn.explore {
    float: right;
    margin-right: 9px;
}

label {
    cursor: pointer;
}

label i {
    font-size: 90%;
    color: grey;
}

label:hover {
    opacity: 0.7;
}

